@@ -13,7 +13,15 @@ my $bat  = 'ßå†';
 
 my $iri_str = "http://$host$path?$foo=$bar#$frag";
 
-ok my $iri = iri($iri_str), 'ctor';
+# DEBUG
+diag "\n";
+diag '--------------------------------------------------------------------------------';
+my $iri = iri($iri_str);
+diag '--------------------------------------------------------------------------------';
+$iri->debug;
+diag '--------------------------------------------------------------------------------';
+
+ok $iri, 'ctor';
 ok $iri->isa('URI::Fast::IRI'), 'isa';
 
 subtest 'getters' => sub{
